<resources>
    <string name="app_name">WeatherApp</string>
    <string name="settings">Settings</string>
    <string name="city_zip_code">City ZipCode</string>
</resources>
